--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
 	margin: 0;
 	padding: 0;
+	font-family: sans-serif;
 }
 section{
 	display: flex;
@@ -19,7 +20,102 @@ section{
   height: 100%;
 
 }
-.swiper-wrapper{
+.swiper-wrapper {
 	margin-bottom: 50px;
 	cursor: grab;
 }
+.contetnt-wrap {
+	display: grid;
+	width: 100%;
+}
+.header {
+	width: 100%;
+	height: 1106px;
+	position: relative;
+	overflow: hidden;
+	background-image: url(../img/headerbg.png);
+	background-position: center; 
+	display: grid;
+}
+.logo-game {
+	position: absolute;
+	top: 33px;
+	left: 60px;
+}
+.btn-header {
+	position: absolute;
+	right: 0px;
+	top: 67px;
+	display: flex;
+}
+.btn-header div {
+	width: 160px;
+	height: 56px;
+	margin-right: 60px;
+	border-radius: 50px;
+	background-color:rgba(02,11,42,0.65);
+	border:1px solid #1e3686;
+	font-size: 21px;
+	color: #aaa;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: background-color color 0.3s;
+}
+.btn-header a {
+	text-decoration: none;
+}
+.btn-header div:hover {
+	background-color:rgba(02,11,42,1);
+	color: #dabebe;
+}
+.content-header {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	top: 50%;
+}
+.btn-play {
+	background-image: url(../img/layoutbtn1.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 380px;
+	height: 110px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.btn-play  a{
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+
+}
+.btn-play  a span:nth-child(1){
+	width: 48px;
+	height: 48px;
+	border-radius: 50%;
+	font-size: 48px;
+	color: rgba(255,255,255,1);
+	transition:color 0.3s;
+}
+.btn-play  a span:nth-child(2){
+	position: absolute;
+	left: 15px;
+	font-size: 24px;
+	color: #fff;
+	color: rgba(0,0,0,0);
+	transition:color 0.3s;
+}
+.btn-play  a:hover span:nth-child(1){
+	color: rgba(0,0,0,0);
+}
+.btn-play  a:hover span:nth-child(2){
+	color: rgba(255,255,255,1);
+}
+
