--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,99 @@ section{
 .content-body .follow .links img:hover {
 	opacity: 1;
 }
+.footer {
+	position: relative;
+	width: 100%;
+	height: 300px;
+	background-color: #000;
+}
+.footer .language-setting {
+	margin:0px 100px;
+	color: #999;
+	text-transform: capitalize;
+	display: flex;
+	justify-content: center;
+	border-bottom: #1a1a1a solid 2px;
+}
+.footer .language-setting .language{
+	display: flex;
+	justify-content: center;
+	font-size: 20px;
+}
+.footer .language-setting .language span {
+	padding: 10px 30px;
+	cursor: pointer;
+	transition: transform 0.3s;
+}
+.footer .language-setting .menu-language{
+	background-color: #222;
+	position: absolute;
+	display: flex;
+	top: -168px;
+	left: 54%;
+	box-sizing: border-box;
+	padding: 0 20px;
+	opacity: 0;
+	transition: opacity 0.3s;
+}
+.footer .language-setting .menu-language:after {
+	content: '';
+    position: absolute;
+    right: 73%;
+    bottom: -10px;
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 10px solid #222;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+.footer .language-setting .menu-language ul li{
+	list-style: none;
+	padding: 5px 20px;
+	cursor: pointer;
+	font-size: 16px;
+}
+.footer .language-setting .language:hover span:nth-child(3){
+	transform: rotate(180deg);
+}
+.footer .language-setting .menu-language ul li:hover{
+	color: #fff;
+}
+.language:hover .menu-language{
+	opacity: 1;
+}
+.logo-footer{
+	display: flex;
+	align-items: center;
+	position: absolute;
+	left: 20%;
+}
+.logo-footer img:nth-child(1){
+	margin-right: 20px;
+	padding-right: 20px;
+	border-right: #fff solid 2px;
+}
+.footer-content {
+	padding: 50px;
+	color: #fff;
+}
+.footer-content span {
+	border-left: 1px solid #fff;
+	padding: 0 10px;
+}
+.footer-content a {
+	color: #7d7d7d;
+	font-size: 16px;
+}
+.footer-content a:hover {
+	text-decoration: underline;
+	color: #fff;
+}
+.footer-content div{
+	margin: 10px 0;
+}
+.footer-content div:last-child {
+	color: #7d7d7d;
+	font-size: 14px;
+}
